<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PeerMap</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="SaveBtnTxt">Save</string>
    <string name="UploadBtnTxt">Upload To Cloud</string>
    <string name="ChoosePathBtnTxt">Choose Path</string>
    <string name="SaveFileHint">Enter Path Name</string>
    <string name="RecordPathContentDesc">Button to record and stop recording path</string>
    <string name="GoHomeBtnTxt">Home</string>
    <string name="RecordBtnTxt_On">Recording</string>
    <string name="RecordBtnTxt_Off">Record Path</string>
    <string name="UpdateBtnTxt">Update</string>
    <string name="DirectionTxtLabel">Direction To Travel</string>
    <string name="CompassTxtLabel">Current Direction</string>
    <string name="DistanceTxtLabel">Distance(meters)</string>
    <string name="emptyString"></string>
    <string name="CloudDefault">No Cloud Access</string>
    <string name="CloudLogin">Log in to cloud</string>
    <string name="CloudLogout">Log out of cloud</string>
    <string name="PeerHelpBtn">Peer help</string>
    <string name="GatheringLocationTxt">Obtaining Current Location</string>
    <string name="InvalidFileTxt">Invalid path file type!</string>
    <string name="EmptyPathTxt">Empty path!</string>
    <string name="app_name">WiFi Direct</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
</resources>
